--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <title>OurPet</title>
 </head>
 <body>
-    <h1>Hi</h1>
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <a href="/" class="navbar-brand mr-auto">ourpet</a>
+        </div>
+    </nav>
     
     <!-- build:js js/main.js -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
