--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                 <div id="Navbar" class="collapse navbar-collapse justify-content-end">
                     <ul class="navbar-nav text-nowrap text-white">
                         <li class="nav-item">
-                            <a href="#" class="nav-link lite-yellow">Dog</a>
+                            <a href="/dog.html" class="nav-link lite-yellow-hover">Dog</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link blue">Cat</a>
+                            <a href="/cat.html" class="nav-link blue-hover">Cat</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link lite-blue">Fish</a>
+                            <a href="/fish.html" class="nav-link lite-blue-hover">Fish</a>
                         </li>
                         <li class="nav-item d-sm-none d-md-inline">
-                            <a href="#" class="nav-link green">Reptile</a>
+                            <a href="/reptile.html" class="nav-link green-hover">Reptile</a>
                         </li>
                         <li class="nav-item d-sm-none d-md-inline">
-                            <a href="#" class="nav-link lite-grey">Otters</a>
+                            <a href="/otters.html" class="nav-link lite-grey-hover">Otters</a>
                         </li>
                     </ul>
                     <form class="" role="search">
@@ -108,7 +108,7 @@
         <section id="PopularCategories" class="bg-lite-orange">
             <div class="container">
                 <div class="col">
-                    <h3 class="pt-2 text-white">Popular Categories</h3>
+                    <h3 class="pt-2 text-white">Popular Blogs</h3>
                     <div class="row">
                         <div id="PetsCategoriesCarousel" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner" role="listbox">
